--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
     <!-- Navbar Start -->
     <nav class="navbar fixed-top shadow-sm navbar-expand-lg bg-dark navbar-dark py-1 py-lg-0 px-lg-5">
         <a href="index.html" class="navbar-brand d-block d-lg-none">
-            <h1 class="display-4 text-white text-uppercase m-0">DavidAire</h1>
+            <h1 class="display-4 text-white text-uppercase m-0">David Rivero</h1>
         </a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -43,7 +43,7 @@
                 <a href="#project" class="nav-item nav-link">Proyecto</a>
             </div>
             <a href="index.html" class="navbar-brand bg-primary px-4 mx-3 d-none d-lg-block">
-                <h1 class="display-4 text-white text-uppercase m-0">DavidAire</h1>
+                <h1 class="display-4 text-white text-uppercase m-0">David Rivero</h1>
             </a>
             <div class="navbar-nav mr-auto py-0">
 <!--                 <a href="#team" class="nav-item nav-link">Equipo</a>
@@ -392,7 +392,7 @@
                 <div class="col-lg-8">
                     <div class="contact-form">
                         <div id="success"></div>
-                        <form action="https://formsubmit.co/sergio96romero96@gmail.com" method="POST" >
+                        <form action="https://formsubmit.co/david082rg@gmail.com" method="POST" >
                             <div class="form-row">
                                 <div class="col-sm-6 control-group">
                                     <input type="text" class="form-control bg-secondary border-0 py-4 px-3" id="name" placeholder="Tu Nombre" name="name" required="required"  />
@@ -415,7 +415,7 @@
                                 <button class="btn btn-primary font-weight-bold py-3 px-5" type="submit" >Enviar Mensaje</button>
                             </div>
 
-                            <input type="hidden" name="_next" value="https://dirt-pointy-raincoat.glitch.me/">
+                            <input type="hidden" name="_next" value="https://mountainous-puddle-pyroraptor.glitch.me/">
                             <input type="hidden" name="_captcha" value="false">
                         </form>
                     </div>
@@ -440,7 +440,7 @@
                     <div class="col-md-4">
                         <div class="text-md-center">
                             <h5 class="text-primary text-uppercase mb-2" style="letter-spacing: 5px;">Email</h5>
-                            <p class="mb-4 m-md-0">sergio96romero96@gmail.com</p>
+                            <p class="mb-4 m-md-0">david082rg@gmail.com</p>
                         </div>
                     </div>
                     <div class="col-md-4">
