--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9628,7 +9628,7 @@ a .fa-xl {
 }
 
 .bg-gallery {
-  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/about.jpg), no-repeat center center;
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/aireacond.jpg), no-repeat center center;
   background-size: cover;
 }
 
