--- a/views/index.ejs
+++ b/views/index.ejs
@@ -102,7 +102,7 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-5">
-                    <img class="img-fluid mb-4 mb-lg-0" src="img/about.jpg" alt="">
+                    <img class="img-fluid mb-4 mb-lg-0" src="img/airegustavo.jpeg" alt="">
                 </div>
                 <div class="col-lg-7">
                     <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Sobre Nosotros</h6>
@@ -415,7 +415,7 @@
                                 <button class="btn btn-primary font-weight-bold py-3 px-5" type="submit" >Enviar Mensaje</button>
                             </div>
 
-                            <input type="hidden" name="_next" value="https://mountainous-puddle-pyroraptor.glitch.me/">
+                            <input type="hidden" name="_next" value="https://dawn-sneaky-fontina.glitch.me/">
                             <input type="hidden" name="_captcha" value="false">
                         </form>
                     </div>
